Lessons learnt in the time of corona

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
     name: 'Nabarun Chatterjee'
 
 pensieve:
-    repo: https://github.com/nabarunchatterjee/pensieve
+    repo: https://github.com/nabarunchatterjee/nabarunchatterjee.github.io/
 
 twitter:
     username: vimrookie
