Add google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -30,3 +30,5 @@ twitter:
     username: vimrookie
 
 resume: https://github.com/nabarunchatterjee/my-humble-cv/blob/master/resume.pdf
+
+google_anlytics: UA-161522130-2
