--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ tagline: Whats in a tag line
 description: >-
     Memory Review
 
-url: https://nabarunchatterjee.github.io
+url: https://pensieve.nabarun.io
 github_username: nabarunchatterjee
 timezone: Asia/Kolkata
 # Build settings
